snapshots/src/snapshots/wasix_integration_tests__tests__condvar.snap
---
source: src/lib.rs
expression: snap
---
result:
  Ok: ~
code: 0
stdin: ""
stdout: "condvar1 thread spawn\ncondvar1 thread started\ncondvar1 thread sleep(1sec) start\ncondvar loop\ncondvar wait\ncondvar1 thread sleep(1sec) end\ncondvar1 thread set condition\ncondvar1 thread notify\ncondvar woken\ncondvar parent done\ncondvar1 thread exit\nall done\n"
stderr: ""

