snapshots/src/snapshots/wasix_integration_tests__tests__dash.snap
---
source: src/lib.rs
expression: snap
---
result:
  Ok: ~
code: 0
stdin: echo 2
stdout: "2\n"
stderr: "# # \n"

