snapshots/src/snapshots/wasix_integration_tests__tests__example_multi_threading.snap
---
source: src/lib.rs
expression: snap
---
result:
  Ok: ~
code: 0
stdin: ""
stdout: "thread 1 started\nthread 2 started\nthread 3 started\nthread 4 started\nthread 5 started\nthread 6 started\nthread 7 started\nthread 8 started\nthread 9 started\nwaiting for threads\nthread 1 finished\nthread 2 finished\nthread 3 finished\nthread 4 finished\nthread 5 finished\nthread 6 finished\nthread 7 finished\nthread 8 finished\nthread 9 finished\nall done\n"
stderr: ""

