snapshots/src/snapshots/wasix_integration_tests__tests__example_tcp_client.snap
---
source: src/lib.rs
expression: snap
---
result:
  Ok: ~
code: 0
stdin: ""
stdout: "Successfully connected to server in port 53\nFinished.\n"
stderr: ""

