snapshots/src/snapshots/wasix_integration_tests__tests__fork_longjump.snap
---
source: src/lib.rs
expression: snap
---
result:
  Ok: ~
code: 0
stdin: ""
stdout: "Parent has x = 0\nChild has x = 2\nChild(1) exited with 5\n"
stderr: ""

